fix layout shifts

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -265,7 +265,7 @@ body {
 
 .project-img {
   width: 100%;
-  height: auto;
+  aspect-ratio: 16/9;
   object-fit: cover;
   border-radius: 10px;
   padding: 10px;
